# potatui

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
potatui/: _ssl_ctx.py  adif.py  commands.py  config.py  flrig.py  hamdb.py  log.py  main.py  mode_map.py  park_db.py  pota_api.py  propagation.py  qrz.py  session.py  space_weather.py  wawa.py  wsjtx.py
potatui/resources/: default_config.toml
potatui/screens/: commander.py  logger.py  logger.tcss  logger_modals.py  mode_translations.py  park_update.py  resume.py  settings.py  setup.py  spots.py
tests/: test_adif.py  test_config.py  test_lint.py  test_session.py  test_space_weather_muf.py
tools/: fake_wsjtx.py
