[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potatui"
version = "0.1.0"
description = "A TUI application for logging Parks on the Air (POTA) activations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-SA-4.0" }
dependencies = [
    "textual>=0.60",
    "httpx>=0.25",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
potatui = "potatui.main:run"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["potatui"]

[tool.hatch.build.targets.wheel.force-include]
"potatui/resources/default_config.toml" = "potatui/resources/default_config.toml"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common logic bugs)
]
ignore = [
    "E501",  # line too long
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
