[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potatui"
dynamic = ["version"]
description = "A TUI application for logging Parks on the Air (POTA) activations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "MonkeybutlerCJH", email = "nv3y@nv3y.com" },
]
keywords = ["pota", "parks on the air", "ham radio", "amateur radio", "logging", "tui", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
]

dependencies = [
    "textual>=0.60",
    "httpx>=0.25",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/MonkeybutlerCJH/potatui"
Repository = "https://github.com/MonkeybutlerCJH/potatui"
Issues = "https://github.com/MonkeybutlerCJH/potatui/issues"

[project.scripts]
potatui = "potatui.main:run"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.hatch.version]
path = "potatui/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["potatui"]

[tool.hatch.build.targets.wheel.force-include]
"potatui/resources/default_config.toml" = "potatui/resources/default_config.toml"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common logic bugs)
]
ignore = [
    "E501",  # line too long
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
